# GeminiDecode---Multilanguage-Document-Extraction-by-Gemini-Pro

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  My_app_link.txt  Readme.md  app.py  pyproject.toml  pytest.ini  setup.py
.streamlit/: secrets.toml
tests/: test_app.py
